@@ -27,11 +27,23 @@ import java.util.Locale;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.ConcurrentMap;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
+
+import org.gradle.tooling.GradleConnector;
+import org.gradle.tooling.ProjectConnection;
+import org.gradle.tooling.model.eclipse.EclipseProject;
+import org.gradle.tooling.model.eclipse.EclipseSourceDirectory;
+import org.gradle.tooling.model.idea.IdeaCompilerOutput;
+import org.gradle.tooling.model.idea.IdeaDependency;
+import org.gradle.tooling.model.idea.IdeaModule;
+import org.gradle.tooling.model.idea.IdeaProject;
+import org.gradle.tooling.model.idea.IdeaSingleEntryLibraryDependency;
 
 /**
  * Compiles a single generated test file. The invoker resolves the test runtime classpath via a
@@ -43,6 +55,19 @@ public class GradleCompilerInvoker implements CompilerInvoker {
     private final PipelineLogger logger;
     private final boolean cleanupOutputs;
     private static final CompilationCache COMPILATION_CACHE = CompilationCache.getInstance();
+    private static final CompilationEnvironment COMPILATION_ENVIRONMENT = new CompilationEnvironment();
+    private static final ConcurrentMap<String, ClasspathResolution> CLASSPATH_CACHE = new ConcurrentHashMap<>();
+    private static final ConcurrentMap<Path, Long> DEPENDENCY_FILE_TIMESTAMPS = new ConcurrentHashMap<>();
+    private static final Set<Path> DEFAULT_CLASSPATH = defaultClasspath();
+    private static final Set<String> DEPENDENCY_FILE_NAMES = Set.of(
+            "gradle.dependencies",
+            "dependencies.gradle",
+            "build.gradle",
+            "build.gradle.kts",
+            "settings.gradle",
+            "settings.gradle.kts",
+            "libs.versions.toml"
+    );
 
     public GradleCompilerInvoker(PipelineLogger logger) {
         this(logger, false);
@@ -55,7 +80,12 @@ public class GradleCompilerInvoker implements CompilerInvoker {
 
     @Override
     public CompileResult compile(Path projectRoot, Path testClassFile, String methodName) {
-        return compile(projectRoot, testClassFile, methodName, false);
+        return compile(projectRoot, testClassFile, methodName, false, true);
+    }
+
+    @Override
+    public CompileResult compileWithoutCache(Path projectRoot, Path testClassFile, String methodName) {
+        return compile(projectRoot, testClassFile, methodName, false, false);
     }
 
     public CompileResult compileAllTests(Path projectRoot, String methodName) {
@@ -87,14 +117,24 @@ public class GradleCompilerInvoker implements CompilerInvoker {
             String modulePath = entry.getKey();
             List<Path> moduleTargets = entry.getValue();
 
-            List<CompileResult> cachedResults = moduleTargets.stream()
-                    .map(target -> getCachedResult(deriveCacheKey(List.of(target), target)))
-                    .filter(Objects::nonNull)
-                    .toList();
+            boolean dependenciesChanged = dependencyFileUpdated(projectRoot);
+            if (dependenciesChanged) {
+                invalidateClasspathCacheForProject(projectRoot);
+                moduleTargets.forEach(COMPILATION_CACHE::remove);
+            }
 
-            List<Path> staleTargets = moduleTargets.stream()
-                    .filter(target -> getCachedResult(deriveCacheKey(List.of(target), target)) == null)
-                    .toList();
+            List<CompileResult> cachedResults = dependenciesChanged
+                    ? List.of()
+                    : moduleTargets.stream()
+                            .map(target -> getCachedResult(deriveCacheKey(List.of(target), target)))
+                            .filter(Objects::nonNull)
+                            .toList();
+
+            List<Path> staleTargets = dependenciesChanged
+                    ? moduleTargets
+                    : moduleTargets.stream()
+                            .filter(target -> getCachedResult(deriveCacheKey(List.of(target), target)) == null)
+                            .toList();
 
             if (staleTargets.isEmpty()) {
                 moduleTargets.forEach(target -> messages.add("Using cached compilation result for " + target.toAbsolutePath().normalize()));
@@ -109,7 +149,7 @@ public class GradleCompilerInvoker implements CompilerInvoker {
                     ? projectRoot
                     : projectRoot.resolve(Path.of(modulePath.replace(":", "/")));
 
-            ModuleCompilationOutcome moduleOutcome = compileModuleTests(projectRoot, modulePath, moduleRoot, moduleTargets, methodName, messages);
+            ModuleCompilationOutcome moduleOutcome = compileModuleTests(projectRoot, modulePath, moduleRoot, moduleTargets, methodName, messages, dependenciesChanged);
             CompileResult moduleResult = moduleOutcome.result();
             overallSuccess &= moduleResult.success();
             appendOutputs(stdout, stderr, moduleResult);
@@ -125,7 +165,7 @@ public class GradleCompilerInvoker implements CompilerInvoker {
         return new CompileResult(overallSuccess, messages, stdout.toString(), stderr.toString());
     }
 
-    private CompileResult compile(Path projectRoot, Path testClassFile, String methodName, boolean includeAllTestClasses) {
+    private CompileResult compile(Path projectRoot, Path testClassFile, String methodName, boolean includeAllTestClasses, boolean useCache) {
         List<String> messages = new ArrayList<>();
         if (!Files.exists(testClassFile)) {
             String message = "Target test path does not exist: " + testClassFile;
@@ -133,7 +173,7 @@ public class GradleCompilerInvoker implements CompilerInvoker {
             return new CompileResult(false, List.of(message), "", message);
         }
 
-        JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
+        JavaCompiler compiler = COMPILATION_ENVIRONMENT.getCompiler();
         if (compiler == null) {
             String message = "No system Java compiler available. Ensure a JDK is installed.";
             logger.error(message);
@@ -154,21 +194,29 @@ public class GradleCompilerInvoker implements CompilerInvoker {
         }
 
         Path cacheKey = deriveCacheKey(compilationTargets, testClassFile);
-        CompileResult cachedResult = getCachedResult(cacheKey);
-        if (cachedResult != null) {
-            return cachedResult;
-        }
-
-        Path representative = compilationTargets.getFirst();
+        Path representative = compilationTargets.get(0);
         String modulePath = determineGradlePath(projectRoot, representative);
         Path moduleRoot = modulePath.isBlank() ? projectRoot : projectRoot.resolve(Path.of(modulePath.replace(":", "/")));
         Path outputDir = moduleRoot.resolve("build/classes/java/test");
+
+        boolean dependenciesChanged = dependencyFileUpdated(projectRoot);
+        if (dependenciesChanged) {
+            invalidateClasspathCacheForProject(projectRoot);
+            if (useCache) {
+                COMPILATION_CACHE.remove(cacheKey);
+            }
+        } else if (useCache) {
+            CompileResult cachedResult = getCachedResult(cacheKey);
+            if (cachedResult != null) {
+                return cachedResult;
+            }
+        }
 
         boolean outputDirPreexisted = Files.exists(outputDir);
         try {
             Files.createDirectories(outputDir);
 
-            Set<Path> classpathEntries = resolveTestClasspath(projectRoot, modulePath, messages);
+            Set<Path> classpathEntries = resolveTestClasspathWithRefresh(projectRoot, modulePath, messages, dependenciesChanged);
             if (includeAllTestClasses) {
                 classpathEntries.addAll(resolveAllTestOutputs(projectRoot, messages));
             }
@@ -190,10 +238,7 @@ public class GradleCompilerInvoker implements CompilerInvoker {
                 fileManager.setLocationFromPaths(StandardLocation.CLASS_OUTPUT, List.of(outputDir));
 
                 Iterable<? extends JavaFileObject> units = fileManager.getJavaFileObjectsFromPaths(compilationTargets);
-                List<String> options = new ArrayList<>();
-                options.add("--release");
-                options.add(String.valueOf(Runtime.version().feature()));
-                options.add("-g");
+                List<String> options = COMPILATION_ENVIRONMENT.copyBaseOptions();
 
                 logger.info("Compiling " + compilationTargets.size() + " test source(s) starting at " + testClassFile
                         + " for method " + methodName);
@@ -206,14 +251,17 @@ public class GradleCompilerInvoker implements CompilerInvoker {
                 if (!compilationSucceeded) {
                     logger.warn("Compilation failed for " + testClassFile);
                 }
-                return cacheResult(cacheKey, new CompileResult(compilationSucceeded, messages, stdout, stderr));
+                CompileResult result = new CompileResult(compilationSucceeded, messages, stdout, stderr);
+                return useCache ? cacheResult(cacheKey, result) : result;
             } catch (IOException exception) {
                 logger.error("Compilation failed for " + testClassFile, exception);
-                return cacheResult(cacheKey, new CompileResult(false, messages, "", exception.getMessage()));
+                CompileResult result = new CompileResult(false, messages, "", exception.getMessage());
+                return useCache ? cacheResult(cacheKey, result) : result;
             }
         } catch (IOException exception) {
             logger.error("Compilation failed for " + testClassFile, exception);
-            return cacheResult(cacheKey, new CompileResult(false, messages, "", exception.getMessage()));
+            CompileResult result = new CompileResult(false, messages, "", exception.getMessage());
+            return useCache ? cacheResult(cacheKey, result) : result;
         } finally {
             if (cleanupOutputs && !outputDirPreexisted) {
                 try {
@@ -226,7 +274,8 @@ public class GradleCompilerInvoker implements CompilerInvoker {
     }
 
     private ModuleCompilationOutcome compileModuleTests(Path projectRoot, String modulePath, Path moduleRoot,
-                                                        List<Path> compilationTargets, String methodName, List<String> messages) {
+                                                        List<Path> compilationTargets, String methodName, List<String> messages,
+                                                        boolean dependenciesChanged) {
         JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
         if (compiler == null) {
             String message = "No system Java compiler available. Ensure a JDK is installed.";
@@ -239,7 +288,10 @@ public class GradleCompilerInvoker implements CompilerInvoker {
         try {
             Files.createDirectories(outputDir);
 
-            Set<Path> classpathEntries = resolveTestClasspath(projectRoot, modulePath, messages);
+            if (dependenciesChanged) {
+                invalidateClasspathCacheForProject(projectRoot);
+            }
+            Set<Path> classpathEntries = resolveTestClasspathWithRefresh(projectRoot, modulePath, messages, dependenciesChanged);
             classpathEntries.addAll(resolveAllTestOutputs(projectRoot, messages));
             classpathEntries.add(outputDir);
             classpathEntries.add(moduleRoot.resolve("build/classes/java/main"));
@@ -341,21 +393,27 @@ public class GradleCompilerInvoker implements CompilerInvoker {
         }
 
         Path cacheKey = deriveCacheKey(compilationTargets, testClassFile);
-        CompileResult cachedResult = getCachedResult(cacheKey);
-        if (cachedResult != null) {
-            return cachedResult;
-        }
-
-        Path representative = compilationTargets.getFirst();
+        Path representative = compilationTargets.get(0);
         String modulePath = determineGradlePath(projectRoot, representative);
         Path moduleRoot = modulePath.isBlank() ? projectRoot : projectRoot.resolve(Path.of(modulePath.replace(":", "/")));
         Path outputDir = moduleRoot.resolve("build/classes/java/test");
+
+        boolean dependenciesChanged = dependencyFileUpdated(projectRoot);
+        if (dependenciesChanged) {
+            invalidateClasspathCacheForProject(projectRoot);
+            COMPILATION_CACHE.remove(cacheKey);
+        } else {
+            CompileResult cachedResult = getCachedResult(cacheKey);
+            if (cachedResult != null) {
+                return cachedResult;
+            }
+        }
 
         boolean outputDirPreexisted = Files.exists(outputDir);
         try {
             Files.createDirectories(outputDir);
 
-            Set<Path> classpathEntries = resolveTestClasspath(projectRoot, modulePath, messages);
+            Set<Path> classpathEntries = resolveTestClasspathWithRefresh(projectRoot, modulePath, messages, dependenciesChanged);
             classpathEntries.add(outputDir);
             classpathEntries.add(moduleRoot.resolve("build/classes/java/main"));
             classpathEntries.add(moduleRoot.resolve("build/resources/test"));
@@ -371,9 +429,7 @@ public class GradleCompilerInvoker implements CompilerInvoker {
 
             List<String> command = new ArrayList<>();
             command.add("javac");
-            command.add("--release");
-            command.add(String.valueOf(Runtime.version().feature()));
-            command.add("-g");
+            command.addAll(COMPILATION_ENVIRONMENT.copyBaseOptions());
             command.add("-d");
             command.add(outputDir.toString());
             if (!classpath.isBlank()) {
@@ -438,7 +494,7 @@ public class GradleCompilerInvoker implements CompilerInvoker {
     private Path deriveCacheKey(List<Path> compilationTargets, Path requestedPath) {
         return compilationTargets.isEmpty()
                 ? requestedPath.toAbsolutePath().normalize()
-                : compilationTargets.getFirst().toAbsolutePath().normalize();
+                : compilationTargets.get(0).toAbsolutePath().normalize();
     }
 
     private CompileResult cacheResult(Path cacheKey, CompileResult result) {
@@ -545,13 +601,34 @@ public class GradleCompilerInvoker implements CompilerInvoker {
     private record ModuleCompilationOutcome(CompileResult result, List<Diagnostic<? extends JavaFileObject>> diagnostics) {
     }
 
-    private Set<Path> resolveTestClasspath(Path projectRoot, String modulePath, List<String> messages) {
+    private Set<Path> resolveTestClasspathWithRefresh(Path projectRoot, String modulePath, List<String> messages, boolean forceRefresh) {
+        String cacheKey = projectRoot.toAbsolutePath().normalize() + "|" + modulePath;
+        if (forceRefresh) {
+            CLASSPATH_CACHE.remove(cacheKey);
+        }
+        ClasspathResolution cached = CLASSPATH_CACHE.get(cacheKey);
+        if (cached != null && !cached.entries().isEmpty()) {
+            return new LinkedHashSet<>(cached.entries());
+        }
+
+        ClasspathResolution classpath = resolveTestClasspath(projectRoot, modulePath, messages, forceRefresh);
+        if (classpath.entries().isEmpty() && Files.exists(projectRoot.resolve("gradlew")) && !forceRefresh) {
+            classpath = resolveTestClasspath(projectRoot, modulePath, messages, true);
+        }
+
+        if (classpath.derivedFromGradle() && !classpath.entries().isEmpty()) {
+            CLASSPATH_CACHE.put(cacheKey, new ClasspathResolution(new LinkedHashSet<>(classpath.entries()), true));
+        }
+        return classpath.entries();
+    }
+
+    private ClasspathResolution resolveTestClasspath(Path projectRoot, String modulePath, List<String> messages, boolean refreshDependencies) {
         Set<Path> entries = new LinkedHashSet<>();
         Path gradlew = projectRoot.resolve("gradlew");
         if (!Files.exists(gradlew)) {
             messages.add("Gradle wrapper not found. Using current JVM classpath only.");
-            entries.addAll(defaultClasspath());
-            return entries;
+            entries.addAll(DEFAULT_CLASSPATH);
+            return new ClasspathResolution(entries, false);
         }
 
         Path initScript;
@@ -559,50 +636,59 @@ public class GradleCompilerInvoker implements CompilerInvoker {
             initScript = createClasspathInitScript();
         } catch (IOException exception) {
             logger.warn("Failed to create classpath init script: " + exception.getMessage());
-            entries.addAll(defaultClasspath());
-            return entries;
+            entries.addAll(DEFAULT_CLASSPATH);
+            return new ClasspathResolution(entries, false);
         }
 
+        String refreshFlag = refreshDependencies ? " --refresh-dependencies" : "";
         String gradleTask = (modulePath.isBlank() ? "" : (":" + modulePath + ":")) + "printTestClasspath";
-        String command = "./gradlew -q " + gradleTask + " --init-script " + initScript.toAbsolutePath();
-        ProcessBuilder builder = new ProcessBuilder("bash", "-lc", command);
-        builder.directory(projectRoot.toFile());
-        builder.redirectErrorStream(true);
+        String command = "./gradlew -q " + gradleTask + " --init-script " + initScript.toAbsolutePath() + refreshFlag;
         try {
-            Process process = builder.start();
-            String stdout;
-            try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8))) {
-                stdout = reader.lines().collect(Collectors.joining(System.lineSeparator()));
+            GradleTaskResult gradleResult = runGradleCommand(projectRoot, command);
+            if (!gradleResult.success() && !modulePath.isBlank()) {
+                String rootCommand = "./gradlew -q printTestClasspath --init-script " + initScript.toAbsolutePath() + refreshFlag;
+                gradleResult = runGradleCommand(projectRoot, rootCommand);
             }
-            int exitCode = process.waitFor();
-            if (exitCode != 0) {
-                messages.add("Gradle classpath task exited with code " + exitCode + "; falling back to JVM classpath.");
-                entries.addAll(defaultClasspath());
-                return entries;
+            if (!gradleResult.success()) {
+                Set<Path> toolingEntries = resolveTestClasspathViaToolingApi(projectRoot, messages);
+                if (!toolingEntries.isEmpty()) {
+                    messages.add("Gradle classpath task failed; resolved test classpath via Tooling API.");
+                    entries.addAll(toolingEntries);
+                    return new ClasspathResolution(entries, true);
+                }
+                messages.add("Gradle classpath task exited with code " + gradleResult.exitCode() + "; falling back to JVM classpath.");
+                entries.addAll(DEFAULT_CLASSPATH);
+                return new ClasspathResolution(entries, false);
             }
-            String classpathLine = stdout.lines()
+            String classpathLine = gradleResult.stdout().lines()
                     .filter(line -> !line.isBlank())
                     .reduce((first, second) -> second)
                     .orElse("");
             if (classpathLine.isBlank()) {
+                Set<Path> toolingEntries = resolveTestClasspathViaToolingApi(projectRoot, messages);
+                if (!toolingEntries.isEmpty()) {
+                    messages.add("Gradle task returned no classpath; resolved test classpath via Tooling API.");
+                    entries.addAll(toolingEntries);
+                    return new ClasspathResolution(entries, true);
+                }
                 messages.add("Gradle did not return a test classpath; using JVM classpath.");
-                entries.addAll(defaultClasspath());
-                return entries;
+                entries.addAll(DEFAULT_CLASSPATH);
+                return new ClasspathResolution(entries, false);
             }
             entries.addAll(Arrays.stream(classpathLine.split(java.io.File.pathSeparator))
                     .parallel()
                     .filter(path -> !path.isBlank())
                     .map(Path::of)
                     .collect(Collectors.toCollection(LinkedHashSet::new)));
-            messages.add("Gradle wrapper detected. Resolved test classpath via printTestClasspath task.");
-            return entries;
+            messages.add("Gradle wrapper detected. Resolved test classpath via printTestClasspath task" + (refreshDependencies ? " with refresh." : "."));
+            return new ClasspathResolution(entries, true);
         } catch (IOException | InterruptedException exception) {
             if (exception instanceof InterruptedException) {
                 Thread.currentThread().interrupt();
             }
             messages.add("Failed to resolve classpath via Gradle: " + exception.getMessage());
-            entries.addAll(defaultClasspath());
-            return entries;
+            entries.addAll(DEFAULT_CLASSPATH);
+            return new ClasspathResolution(entries, false);
         } finally {
             try {
                 Files.deleteIfExists(initScript);
@@ -612,14 +698,150 @@ public class GradleCompilerInvoker implements CompilerInvoker {
         }
     }
 
+    private Set<Path> resolveTestClasspathViaToolingApi(Path projectRoot, List<String> messages) {
+        GradleConnector connector = GradleConnector.newConnector()
+                .forProjectDirectory(projectRoot.toFile());
+        if (Files.exists(projectRoot.resolve("gradle/wrapper/gradle-wrapper.properties"))) {
+            connector.useBuildDistribution();
+        }
+
+        try (ProjectConnection connection = connector.connect()) {
+            Set<Path> ideaEntries = collectIdeaModelClasspath(connection);
+            if (!ideaEntries.isEmpty()) {
+                return ideaEntries;
+            }
+
+            Set<Path> eclipseEntries = collectEclipseModelClasspath(connection);
+            if (!eclipseEntries.isEmpty()) {
+                return eclipseEntries;
+            }
+
+            messages.add("Tooling API did not provide test classpath entries.");
+            return Set.of();
+        } catch (Exception exception) {
+            messages.add("Tooling API classpath resolution failed: " + exception.getMessage());
+            return Set.of();
+        }
+    }
+
+    private Set<Path> collectIdeaModelClasspath(ProjectConnection connection) {
+        try {
+            IdeaProject project = connection.getModel(IdeaProject.class);
+            if (project == null) {
+                return Set.of();
+            }
+
+            Set<Path> entries = new LinkedHashSet<>();
+            for (IdeaModule module : project.getModules()) {
+                IdeaCompilerOutput output = module.getCompilerOutput();
+                if (output != null) {
+                    if (output.getTestOutputDir() != null) {
+                        entries.add(output.getTestOutputDir().toPath());
+                    }
+                    if (output.getOutputDir() != null) {
+                        entries.add(output.getOutputDir().toPath());
+                    }
+                }
+
+                for (IdeaDependency dependency : module.getDependencies()) {
+                    if (dependency instanceof IdeaSingleEntryLibraryDependency libraryDependency) {
+                        String scope = libraryDependency.getScope() == null ? "" : libraryDependency.getScope().getScope();
+                        if (scope == null || scope.isBlank() || scope.equalsIgnoreCase("TEST")
+                                || scope.equalsIgnoreCase("RUNTIME") || scope.equalsIgnoreCase("COMPILE")) {
+                            File file = libraryDependency.getFile();
+                            if (file != null) {
+                                entries.add(file.toPath());
+                            }
+                        }
+                    }
+                }
+            }
+            return entries;
+        } catch (Exception ignored) {
+            return Set.of();
+        }
+    }
+
+    private Set<Path> collectEclipseModelClasspath(ProjectConnection connection) {
+        try {
+            EclipseProject eclipseProject = connection.getModel(EclipseProject.class);
+            if (eclipseProject == null) {
+                return Set.of();
+            }
+            Set<Path> entries = new LinkedHashSet<>();
+            collectEclipseProjectClasspath(eclipseProject, entries, new LinkedHashSet<>());
+            return entries;
+        } catch (Exception ignored) {
+            return Set.of();
+        }
+    }
+
+    private void collectEclipseProjectClasspath(EclipseProject project, Set<Path> entries, Set<String> visited) {
+        if (project == null) {
+            return;
+        }
+        String identity = project.getName() + "|" + project.getProjectDirectory().getAbsolutePath();
+        if (!visited.add(identity)) {
+            return;
+        }
+
+        if (project.getOutputLocation() != null && project.getOutputLocation().getPath() != null) {
+            entries.add(Path.of(project.getOutputLocation().getPath()));
+        }
+        for (EclipseSourceDirectory sourceDirectory : project.getSourceDirectories()) {
+            if (sourceDirectory.getOutput() != null) {
+                entries.add(Path.of(sourceDirectory.getOutput()));
+            }
+        }
+        project.getClasspath().forEach(dependency -> {
+            if (dependency.getFile() != null) {
+                entries.add(dependency.getFile().toPath());
+            }
+        });
+        for (EclipseProject child : project.getChildren()) {
+            collectEclipseProjectClasspath(child, entries, visited);
+        }
+    }
+
+    private GradleTaskResult runGradleCommand(Path projectRoot, String command) throws IOException, InterruptedException {
+        ProcessBuilder builder = new ProcessBuilder("bash", "-lc", command);
+        builder.directory(projectRoot.toFile());
+        builder.redirectErrorStream(true);
+        Process process = builder.start();
+        String stdout;
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8))) {
+            stdout = reader.lines().collect(Collectors.joining(System.lineSeparator()));
+        }
+        int exitCode = process.waitFor();
+        return new GradleTaskResult(exitCode == 0, exitCode, stdout);
+    }
+
+
     private Path createClasspathInitScript() throws IOException {
-        String script = "allprojects { project ->\n" +
-                "    project.plugins.withId('java') {\n" +
-                "        project.tasks.register('printTestClasspath') {\n" +
-                "            doLast { println project.sourceSets.test.runtimeClasspath.asPath }\n" +
-                "        }\n" +
-                "    }\n" +
-                "}\n";
+        String script = """
+                allprojects { project ->
+                    project.afterEvaluate {
+                        def taskName = 'printTestClasspath'
+                        if (project.tasks.findByName(taskName) != null) return
+                        project.tasks.register(taskName) {
+                            doLast {
+                                def sourceSets = project.extensions.findByName('sourceSets')
+                                def testSet = sourceSets == null ? null : sourceSets.findByName('test')
+                                def configuration = project.configurations.findByName('testRuntimeClasspath')
+                                if (configuration == null) configuration = project.configurations.findByName('testRuntimeOnly')
+                                def classpathFiles = [] as Set
+                                if (configuration != null) { classpathFiles.addAll(configuration.resolve()) }
+                                if (testSet != null) {
+                                    classpathFiles.addAll(testSet.output.classesDirs.files)
+                                    if (testSet.output.resourcesDir != null) { classpathFiles.add(testSet.output.resourcesDir) }
+                                    if (testSet.runtimeClasspath != null) { classpathFiles.addAll(testSet.runtimeClasspath.files) }
+                                }
+                                println classpathFiles.collect { it.absolutePath }.join(File.pathSeparator)
+                            }
+                        }
+                    }
+                }
+                """;
         Path tempScript = Files.createTempFile("print-test-classpath", ".gradle");
         Files.writeString(tempScript, script, StandardCharsets.UTF_8);
         return tempScript;
@@ -688,11 +910,17 @@ public class GradleCompilerInvoker implements CompilerInvoker {
     private Path createAllTestOutputsInitScript() throws IOException {
         String script = "gradle.projectsEvaluated {\n" +
                 "    def outputs = rootProject.allprojects\n" +
-                "        .findAll { it.plugins.hasPlugin('java') }\n" +
-                "        .collectMany { it.sourceSets.test.output.classesDirs.files }\n" +
-                "        .collect { it.absolutePath }\n" +
-                "    rootProject.tasks.register('printAllTestOutputs') {\n" +
-                "        doLast { println outputs.join(File.pathSeparator) }\n" +
+                "        .collectMany { project ->\n" +
+                "            def sourceSets = project.extensions.findByName('sourceSets')\n" +
+                "            if (sourceSets == null) return []\n" +
+                "            def testSet = sourceSets.findByName('test')\n" +
+                "            if (testSet == null) return []\n" +
+                "            return testSet.output.classesDirs.files.collect { it.absolutePath }\n" +
+                "        }\n" +
+                "    if (rootProject.tasks.findByName('printAllTestOutputs') == null) {\n" +
+                "        rootProject.tasks.register('printAllTestOutputs') {\n" +
+                "            doLast { println outputs.join(File.pathSeparator) }\n" +
+                "        }\n" +
                 "    }\n" +
                 "}\n";
         Path tempScript = Files.createTempFile("print-all-test-outputs", ".gradle");
@@ -709,10 +937,59 @@ public class GradleCompilerInvoker implements CompilerInvoker {
     private static Set<Path> defaultClasspath() {
         String jvmClasspath = System.getProperty("java.class.path", "");
         return Arrays.stream(jvmClasspath.split(java.io.File.pathSeparator))
-                .parallel()
                 .filter(part -> !part.isBlank())
                 .map(Path::of)
                 .collect(Collectors.toCollection(LinkedHashSet::new));
+    }
+
+    private boolean dependencyFileUpdated(Path projectRoot) {
+        Path normalizedRoot = projectRoot.toAbsolutePath().normalize();
+        Set<Path> candidates = collectDependencyFiles(normalizedRoot);
+        boolean changed = false;
+
+        for (Path candidate : candidates) {
+            try {
+                long lastModified = Files.getLastModifiedTime(candidate).toMillis();
+                Long previous = DEPENDENCY_FILE_TIMESTAMPS.put(candidate, lastModified);
+                if (previous == null || lastModified != previous) {
+                    changed = true;
+                }
+            } catch (IOException exception) {
+                logger.warn("Unable to read dependency timestamp for " + candidate + ": " + exception.getMessage());
+            }
+        }
+
+        for (Path tracked : new ArrayList<>(DEPENDENCY_FILE_TIMESTAMPS.keySet())) {
+            if (tracked.startsWith(normalizedRoot) && !candidates.contains(tracked)) {
+                DEPENDENCY_FILE_TIMESTAMPS.remove(tracked);
+                changed = true;
+            }
+        }
+
+        return changed;
+    }
+
+    private Set<Path> collectDependencyFiles(Path projectRoot) {
+        Set<Path> files = new LinkedHashSet<>();
+        try (Stream<Path> stream = Files.walk(projectRoot)) {
+            stream.filter(Files::isRegularFile)
+                    .filter(path -> DEPENDENCY_FILE_NAMES.contains(path.getFileName().toString()))
+                    .forEach(files::add);
+        } catch (IOException ignored) {
+            // best-effort collection
+        }
+        return files;
+    }
+
+    private void invalidateClasspathCacheForProject(Path projectRoot) {
+        String normalizedRoot = projectRoot.toAbsolutePath().normalize().toString();
+        CLASSPATH_CACHE.keySet().removeIf(key -> key.startsWith(normalizedRoot));
+    }
+
+    private record ClasspathResolution(Set<Path> entries, boolean derivedFromGradle) {
+    }
+
+    private record GradleTaskResult(boolean success, int exitCode, String stdout) {
     }
 
     private void deleteDirectory(Path directory) throws IOException {
@@ -734,6 +1011,19 @@ public class GradleCompilerInvoker implements CompilerInvoker {
     private static String formatDiagnostic(Diagnostic<? extends JavaFileObject> diagnostic) {
         String source = diagnostic.getSource() == null ? "" : diagnostic.getSource().getName();
         return source + ":" + diagnostic.getLineNumber() + ": error: " + diagnostic.getMessage(Locale.getDefault());
+    }
+
+    private static final class CompilationEnvironment {
+        private final JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
+        private final List<String> baseOptions = List.of("--release", String.valueOf(Runtime.version().feature()), "-g");
+
+        JavaCompiler getCompiler() {
+            return compiler;
+        }
+
+        List<String> copyBaseOptions() {
+            return new ArrayList<>(baseOptions);
+        }
     }
 
 }
